<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:layout_marginBottom="@dimen/spacing_middle"
    app:cardCornerRadius="@dimen/spacing_middle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_200"
            android:contentDescription="@string/image"
            android:scaleType="fitXY"
            android:src="@drawable/futsal1" />

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_middle"
            android:layout_marginTop="@dimen/margin5"
            android:layout_marginEnd="@dimen/spacing_middle"
            android:text="@string/nama"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/spacing_middle"
            android:layout_marginTop="@dimen/spacing_middle"
            android:layout_marginEnd="@dimen/spacing_middle"
            android:layout_marginBottom="@dimen/spacing_middle"
            android:drawablePadding="@dimen/margin5"
            android:text="@string/alamat"
            android:textColor="@android:color/background_dark"
            app:drawableStartCompat="@drawable/ic_location" />

    </LinearLayout>

</androidx.cardview.widget.CardView>