<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detailLapangan.DetailLapanganActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="@dimen/margin3"
        android:layout_marginEnd="@dimen/margin3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin7"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="@dimen/margin3"
                android:layout_marginBottom="@dimen/margin3"
                android:elevation="10dp"
                app:cardCornerRadius="@dimen/radius8">

                <ImageView
                    android:id="@+id/iv_lapangan1"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:background="#c1c1c1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/futsal1" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="@dimen/margin3"
                android:layout_marginBottom="@dimen/margin3"
                android:elevation="10dp"
                app:cardCornerRadius="@dimen/radius8">

                <ImageView
                    android:id="@+id/iv_lapangan2"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:background="#c1c1c1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/futsal1" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="@dimen/margin3"
                android:layout_marginBottom="@dimen/margin3"
                android:elevation="10dp"
                app:cardCornerRadius="@dimen/radius8">

                <ImageView
                    android:id="@+id/iv_lapangan3"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:background="#c1c1c1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/futsal1" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin15"
            android:layout_marginBottom="@dimen/margin15"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name_lapangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="15dp"
                android:text="@string/nama"
                android:textColor="@android:color/darker_gray"
                android:textSize="14dp" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/tv_name_lapangan"
                android:layout_marginTop="@dimen/margin15"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view1"
                android:layout_marginStart="@dimen/margin7"
                android:layout_marginTop="@dimen/margin15"
                android:layout_marginEnd="@dimen/margin7"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/harga1" />

                    <TextView
                        android:id="@+id/tv_harga_pagi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin3"
                        android:gravity="center"
                        android:text="@string/rp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:gravity="center"
                        android:text="@string/harga2" />

                    <TextView
                        android:id="@+id/tv_jam_tutup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin3"
                        android:gravity="center"
                        android:text="@string/rp" />

                </LinearLayout>

                <View
                    android:layout_width="50dp"
                    android:layout_height="1dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jenis_rumput" />

                    <TextView
                        android:id="@+id/tv_fasilitas_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/margin3"
                        android:text="@string/rumput_sintetis" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>