<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@android:color/white"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:statusBarScrim="@android:color/white"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/iv_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/img"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/futsal1"
                app:layout_collapseMode="parallax" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/bg_gradient"
                android:fitsSystemWindows="true"
                android:rotation="180" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_detail"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:contentInsetStartWithNavigation="0dp"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

            </FrameLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin15"
            android:layout_marginBottom="@dimen/margin15"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="15dp"
                android:text="@string/nama"
                android:textColor="@android:color/darker_gray"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_alamat_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name_detail"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="@dimen/margin7"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/ic_location"
                android:drawablePadding="@dimen/margin5"
                android:text="@string/nama"
                android:textColor="@android:color/darker_gray"
                android:textSize="14dp" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/tv_alamat_detail"
                android:layout_marginTop="@dimen/margin15"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view1"
                android:layout_marginStart="@dimen/margin7"
                android:layout_marginTop="@dimen/margin15"
                android:layout_marginEnd="@dimen/margin7"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/buka" />

                    <TextView
                        android:id="@+id/tv_jam_buka"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin3"
                        android:gravity="center"
                        android:text="@string/jam" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:gravity="center"
                        android:text="@string/tutup" />

                    <TextView
                        android:id="@+id/tv_jam_tutup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin3"
                        android:gravity="center"
                        android:text="@string/jam" />

                </LinearLayout>

                <View
                    android:layout_width="50dp"
                    android:layout_height="1dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fasil" />

                    <TextView
                        android:id="@+id/tv_fasilitas_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/margin3"
                        android:lineSpacingExtra="0.5dp"
                        android:text="- Wifi \n- Toilet \n- Biliard" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/linear1"
                android:layout_marginTop="@dimen/margin15"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/view2"
                android:layout_marginStart="@dimen/margin7"
                android:layout_marginTop="@dimen/margin15"
                android:layout_marginEnd="@dimen/margin7"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_lapangan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_horizontal" />

            </LinearLayout>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/linear2"
                android:layout_marginTop="@dimen/margin15"
                android:background="@android:color/darker_gray" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view3"
                android:layout_marginTop="@dimen/margin15"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/spacing_mlarge"
                    android:paddingTop="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_mlarge"
                    android:paddingBottom="@dimen/spacing_large">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/loc"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/grey_90"
                        app:fontFamily="sans-serif-medium" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="4dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:background="@color/red_700" />

                    <!--android:name="com.google.android.gms.maps.SupportMapFragment"-->
                    <!--  <fragment
                          android:id="@+id/map_location"
                          android:layout_width="match_parent"
                          android:layout_height="150dp"
                          android:layout_marginTop="@dimen/spacing_large" />-->

                    <TextView
                        android:id="@+id/tv_alamat_detail2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:text="@string/alamat"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_60" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_mlarge"
        android:clickable="true"
        android:contentDescription="@string/fab"
        android:tint="@android:color/white"
        app:backgroundTint="@color/light_green_600"
        app:fabSize="normal"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/ic_call" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>